--- a/ask/templates/popular.html
+++ b/ask/templates/popular.html
@@ -6,6 +6,7 @@
 
 {% if quest_list %}
     <h2>List Quest:</h2>
+    {% csrf_token %}
     <ul>
     {% for quest in quest_list %}
         <li>{{ quest.title }} - {{ quest.rating }}</li>
